--- a/z-css/nav-footer.css
+++ b/z-css/nav-footer.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-/* Reset some default styles */
+/* default styles */
 * {
     margin: 0;
     padding: 0;
@@ -33,12 +33,13 @@ header.title {
 /* Nav */
 header {
     background-color: #000;
-    padding: 20px 0;
+    padding: 10px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     z-index: 1;
+    border-bottom: 1px solid #555
 }
 
 nav {
@@ -70,30 +71,31 @@ nav {
 }
 
 .nav-links a:hover {
-    text-decoration: none;
-    color: #d43939;
-    font-weight: bold;
+  text-decoration: none;
+  color: #d43939;
+  font-weight: bold;
 }
 
 
 /* Footer Styles */
 .footer {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    background-color: #000000;
-    color: #fff;
-    padding: 20px;
+  border-top: 1px solid #555;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  background-color: #000000;
+  color: #fff;
+  padding: 20px;
 }
 
 .footer-left {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .footer-left img{
-    max-width: 5%; 
-    height: auto;
-    margin: 20px;
+  max-width: 5%; 
+  height: auto;
+  margin: 20px;
 }
 
 .copyright {
