--- a/z-css/home.css
+++ b/z-css/home.css
@@ -27,18 +27,19 @@
 }
 
 .card {
-    background-color: #333;
+    background-color: #000000;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 3px;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s, box-shadow 0.2s;
-    width: 300px;
+    transition: transform 0.2s, ease-in-out 0.2s;
+    width: 400px;
+    border: 1px solid #555;
 }
 
 .card:hover {
     transform: translateY(-5px);
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    background-color: #555;
 }
 
 .card h2 {
@@ -63,10 +64,12 @@
 }
 
 .btn:hover {
-    background-color: #000;
+    background-color: #d43939;
     color: #fff;
+    font-weight: bold;
 }
 
+/* Media Screens*/
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .hero {
     width: 100%;
