--- a/z-css/nav-footer.css
+++ b/z-css/nav-footer.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6{
 
 /* Header Styles */
 header.title {
-    padding:0;
+    padding: 5px;
     text-align: center;
     display: flex;
     justify-content: center; 
@@ -31,7 +31,7 @@ header.title {
   }
   
 /* Nav */
-header {
+header.nav {
     background-color: #000;
     padding: 10px 0;
     display: flex;
@@ -68,12 +68,13 @@ nav {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
+  transition: ease-in-out 0.2s;
 }
 
 .nav-links a:hover {
   text-decoration: none;
   color: #d43939;
-  font-weight: bold;
+  font-weight: 800;
 }
 
 
@@ -93,7 +94,7 @@ nav {
 }
 
 .footer-left img{
-  max-width: 5%; 
+  max-width: 3%; 
   height: auto;
   margin: 20px;
 }
@@ -122,9 +123,11 @@ nav {
     text-decoration: none;
     color: #fff;
     font-size: 16px;
+    transition: ease-in-out 0.2s;
 }
 
 .footer-links a:hover {
+  font-weight: bold;
     color: #d43939;
 }
 
