--- a/z-css/nav-footer.css
+++ b/z-css/nav-footer.css
@@ -27,7 +27,7 @@ header.title {
   
   header.title h1 {
     font-size: 36px;
-    margin: 0;
+    margin: 5px;
   }
   
 /* Nav */
@@ -81,11 +81,12 @@ nav {
 /* Footer Styles */
 .footer {
   border-top: 1px solid #555;
-  display: grid;
+  display: flex;
   grid-template-columns: 1fr auto;
   background-color: #000000;
   color: #fff;
   padding: 20px;
+  align-items: center;
 }
 
 .footer-left {
@@ -104,8 +105,15 @@ nav {
 }
 
 .footer-right {
-    width: 600px;
-    text-align: right;
+  flex: 1;
+  text-align: right;
+}
+
+.footer-links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0;
 }
 
 .footer-links ul {
