--- a/z-css/contact.css
+++ b/z-css/contact.css
@@ -1,6 +1,11 @@
 /* Main Styles */
 main {
+  max-width: 60%;
   padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 /* Contact Form Styles */
@@ -10,10 +15,12 @@ main {
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
+  width: 100%;
+  max-width: 70%;
 }
 
-.contact-form h2 {
-  font-size: 24px;
+.contact-form h1 {
+  font-size: 34px;
   margin-bottom: 20px;
   color: #fff;
 }
@@ -41,7 +48,22 @@ main {
   background-color: #333;
   color: #fff;
   font-size: 16px;
+  transition: ease-in-out 0.4s;
 }
+
+.contact-form input[type="text"]:hover,
+.contact-form input[type="email"]:hover,
+.contact-form textarea:hover {
+background-color: #6b6b6b;
+}
+
+.contact-form input[type="text"]:focus,
+.contact-form input[type="email"]:focus,
+.contact-form textarea:focus {
+background-color: #ffffff;
+color: #000;
+}
+
 
 .contact-form textarea {
   resize: vertical;
@@ -58,5 +80,6 @@ main {
 }
 
 .contact-form button:hover {
-  background-color: #ddd;
+  background-color: #d43939;
+  font-weight: 700;
 }
