--- a/z-portfolio/portfolio1img.css
+++ b/z-portfolio/portfolio1img.css
@@ -1,8 +1,9 @@
 .photo-gallery {
-    display: grid;
-    grid-template-columns: 100%;
-    gap: 20px;
-    margin-top: 20px;
+  padding: 0 20px ;
+  display: grid;
+  grid-template-columns: 100%;
+  gap: 20px;
+  margin-top: 20px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1024px) {
