--- a/z-css/home.css
+++ b/z-css/home.css
@@ -19,6 +19,23 @@
     font-weight: 800;
     font-size: 40px;
 }
+.hero-content p{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.hero-content a{
+    text-decoration: underline;
+    color: #fff;
+    transition: ease-in-out 0.3s, transform 0.3s;
+}
+
+.hero-content a:hover{
+    text-decoration: none;
+    color: #d43939;
+    font-weight: bolder;
+    font-size: 18px;
+}
 
 /* content section (cards) */
 .content {
@@ -77,7 +94,19 @@
     border-top: 1px solid #555;
     text-align: center;
     padding: 100px 0;
-    background-color: #1f1f1f;
+    background-color: #161616;
+    position: relative;
+}
+
+.contact::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../z-images/texture2.jpg'); 
+    opacity: 0.04;
 }
 
 .contact-content {
