--- a/z-portfolio/portfolio.css
+++ b/z-portfolio/portfolio.css
@@ -5,7 +5,7 @@
   flex-direction: column; 
   align-items: center; 
   text-align: center;
-  padding: 0;
+  padding: 0 0 40px 0;
 }
 
 .project-details {
