--- a/z-css/photo.css
+++ b/z-css/photo.css
@@ -62,7 +62,7 @@
     text-align: center;
     padding: 150px 0;
     position: relative;
-    background-image: url('../z-images/photo-beach.jpg');
+    background-image: url('../z-images/photo-animals.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
